<resources>
    <string name="app_name">replacepraeparet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">探す</string>
    <string name="post_title">投稿</string>
    <string name="information_title">情報</string>
    <string name="account_title">アカウント</string>
    <string name="tab_item_asia">アジア</string>
    <string name="tab_item_oceania">オセアニア</string>
    <string name="tab_item_north_america">北米</string>
    <string name="tab_item_latin_america">中・南米</string>
    <string name="tab_item_europe">ヨーロッパ</string>
    <string name="tab_item_middle_east">中東</string>
    <string name="tab_item_africa">アフリカ</string>
    <string name="population_label">人口</string>
    <string name="language_label">言語</string>
    <string name="capital_label">首都</string>
    <string name="currency_label">通貨</string>
    <string name="image_description">image</string>
    <string name="mock_population">13億6900万人</string>
    <string name="mock_language">ヒンディー語/英語/他</string>
    <string name="mock_capital">ニューデリー</string>
    <string name="mock_currency">インド・ルピー(INR)₹</string>
    <string name="mock_country_name">インド</string>
    <string name="post_label_in_account">投稿</string>
    <string name="photo_label_in_account">写真</string>
    <string name="post_location_label_in_account">投稿位置</string>
    <string name="post_count_label_in_account">投稿数：</string>
    <string name="photo_count_label_in_account">写真数：</string>
    <string name="example_photo_text_in_account">投稿写真数表示</string>
    <string name="example_post_text_in_account">投稿数表示</string>
    <string name="example_text_in_detail_embassy">レギュラー観光ビザ</string>
    <string name="example_title_in_detail_embassy">大使館タイトル</string>
    <string name="example_address_in_detail_embassy">住所</string>
    <string name="none_text">-</string>
    <string name="guest_name_text">ゲスト</string>
    <string name="login_button_text">ログイン</string>
    <string name="app_title">PRAEPARET</string>
    <string name="set_location">位置を決定する</string>
    <string name="detail_label">詳細</string>
    <string name="category_label">カテゴリー</string>
    <string name="time_of_damage_label">被害にあった時期</string>
    <string name="address_label">住所</string>
    <string name="image_label">画像</string>
    <string name="comment_label">コメント</string>
    <string name="post">投稿する</string>
    <string name="title_label">タイトル</string>
    <string name="alert_range_label">警戒範囲</string>
    <string name="title_text_hint">タイトルを入力...</string>
    <string name="specific_position">特定位置</string>
    <string name="choose_image_alert_text">写真は５枚まで選択できます。</string>
    <string name="enter_text">文章を入力...</string>
    <string name="edit_profile_text">プロフィールを編集する</string>
    <string name="logout">ログアウト</string>
    <string name="login">ログイン</string>
    <string name="example_name">Hannibal Ken</string>
    <string name="nickname_label">ニックネーム</string>
    <string name="cancel">キャンセル</string>
    <string name="edit">変更</string>
    <string name="name">名前</string>
    <string name="guest">ゲスト</string>
    <string name="failed_load_image">画像を読み込めませんでした。再度お試しください。</string>
</resources>