<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_count_label_in_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/show_num_of_post_data_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_post_text_in_account"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_count_label_in_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/show_num_of_post_picture_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_photo_text_in_account"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_in_account"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="#FF9800"
            app:tabRippleColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/post_label_in_account" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_label_in_account" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_location_label_in_account" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>