<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/picture_card_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/flag_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="0"
                        android:background="#FFFFFF"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/ic_android_black_24dp"
                        android:contentDescription="@string/image_description" />

                    <TextView
                        android:id="@+id/country_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center|left"
                        android:text="@string/mock_country_name"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/population_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:text="@string/population_label"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/population_divider"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="2dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/population_text"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/mock_population"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/language_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0"
                        android:text="@string/language_label"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/language_divider"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="0"
                        android:background="?android:attr/listDivider"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/mock_language"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/capital_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:text="@string/capital_label"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/capital_divider"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="2dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/capital_text"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/mock_capital"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/currency_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0"
                        android:text="@string/currency_label"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <View
                        android:id="@+id/currency_divider"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="2dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/currency_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/mock_currency"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/to_detail_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F3F3F3"
                android:text=">"
                android:textColor="#FF9800"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>