<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingTop="30dp"
        android:paddingEnd="18dp"
        android:paddingBottom="30dp"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="true"
        tools:context=".view.fragment.PostBottomSheetFragment"
        tools:ignore="SpUsage" >

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_o_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_label"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_label" />

        <TextView
            android:id="@+id/alert_range_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alert_range_label"
            android:textSize="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <SeekBar
            android:id="@+id/alert_range_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="30"
            android:progress="0"
            app:layout_constraintStart_toStartOf="@id/alert_range_label"
            app:layout_constraintTop_toBottomOf="@id/alert_range_label" />

        <TextView
            android:id="@+id/seek_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_position"
            android:textSize="18dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:background="@color/trigger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_range_seek_bar" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seek_bar_text" />

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/title_label"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"/>

        <EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/title_text_hint"
            android:minHeight="30dp"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_label" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <TextView
            android:id="@+id/category_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:textSize="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <Spinner
            android:id="@+id/category_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/category_label"
            app:layout_constraintTop_toBottomOf="@id/category_label" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_list" />

        <TextView
            android:id="@+id/time_of_damage_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_of_damage_label"
            android:textSize="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <Spinner
            android:id="@+id/time_of_damage_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/time_of_damage_label"
            app:layout_constraintTop_toBottomOf="@id/time_of_damage_label" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_of_damage_list" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:textSize="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider5" />

        <EditText
            android:id="@+id/address_space"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintStart_toStartOf="@id/address_label"
            app:layout_constraintTop_toBottomOf="@id/address_label" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_space" />

        <TextView
            android:id="@+id/image_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image_label"
            android:textSize="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:scrollbars="horizontal"
            android:fadeScrollbars="false"
            app:layout_constraintStart_toStartOf="@+id/image_label"
            app:layout_constraintTop_toBottomOf="@id/image_label" />

        <ImageView
            android:id="@+id/add_image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/photo"
            app:layout_constraintTop_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toEndOf="@+id/recyclerView" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />

        <TextView
            android:id="@+id/comment_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment_label"
            android:textSize="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider7" />

        <EditText
            android:id="@+id/comment_space"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintStart_toStartOf="@id/comment_label"
            app:layout_constraintTop_toBottomOf="@id/comment_label" />

        <Button
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@color/white"
            android:backgroundTint="@color/trigger"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_space"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>